Applied the ocean water type to all the seaside levels.

--- a/data/level/Seaside/burn-and-bubble.cfg
+++ b/data/level/Seaside/burn-and-bubble.cfg
@@ -154,7 +154,7 @@
 				"_y2_bound": 1291,
 				"_y_bound": 653
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 1984,
 			"y": 672
 		},
@@ -223,7 +223,7 @@
 				"_y2_bound": 1322,
 				"_y_bound": 653
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": -64,
 			"y": 640
 		},
@@ -2224,7 +2224,7 @@
 					"_y2_bound": 1291,
 					"_y_bound": 653
 				},
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 1984,
 				"y": 672
 			},
@@ -2243,7 +2243,7 @@
 					"_y_bound": 653
 				},
 				"time_in_frame": 88,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": -64,
 				"y": 640
 			}
