--- a/data/level/Seaside/cragland.cfg
+++ b/data/level/Seaside/cragland.cfg
@@ -16,7 +16,7 @@
 				"_y2_bound": 960,
 				"_y_bound": 653
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": -4128,
 			"y": 640
 		},
@@ -31,7 +31,7 @@
 				"_y2_bound": 1184,
 				"_y_bound": 652
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 192,
 			"y": 640
 		},
