--- a/data/level/Seaside/downhill.cfg
+++ b/data/level/Seaside/downhill.cfg
@@ -26,7 +26,7 @@
 				"_y2_bound": 1953,
 				"_y_bound": 652
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": -224,
 			"y": 608
 		},
@@ -1302,7 +1302,7 @@
 				"_y2_bound": 1791,
 				"_y_bound": 1536
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 3456,
 			"y": 1536
 		},
@@ -1317,7 +1317,7 @@
 				"_y2_bound": 1244,
 				"_y_bound": 652
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 3616,
 			"y": 672
 		},
@@ -1332,7 +1332,7 @@
 				"_y2_bound": 1808,
 				"_y_bound": 1248
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 5408,
 			"y": 1248
 		},
@@ -1663,7 +1663,7 @@
 					"_y_bound": 652
 				},
 				"time_in_frame": 998,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": -224,
 				"y": 608
 			},
@@ -1680,7 +1680,7 @@
 					"_y_bound": 1536
 				},
 				"time_in_frame": 603,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 3456,
 				"y": 1536
 			},
@@ -1697,7 +1697,7 @@
 					"_y_bound": 1248
 				},
 				"time_in_frame": 998,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 5408,
 				"y": 1248
 			}
