--- a/data/level/Seaside/frogatto-grotto.cfg
+++ b/data/level/Seaside/frogatto-grotto.cfg
@@ -83,7 +83,7 @@
 				"_y2_bound": 979,
 				"_y_bound": 652
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 2112,
 			"y": 640
 		},
@@ -98,7 +98,7 @@
 				"_y2_bound": 992,
 				"_y_bound": 651
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 864,
 			"y": 672
 		},
@@ -113,7 +113,7 @@
 				"_y2_bound": 992,
 				"_y_bound": 651
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 128,
 			"y": 640
 		},
@@ -1154,7 +1154,7 @@
 					"_y_bound": 652
 				},
 				"time_in_frame": 801,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 2112,
 				"y": 640
 			},
@@ -1173,7 +1173,7 @@
 					"_y_bound": 651
 				},
 				"time_in_frame": 127,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 128,
 				"y": 640
 			},
@@ -1192,7 +1192,7 @@
 					"_y_bound": 651
 				},
 				"time_in_frame": 211,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 864,
 				"y": 672
 			}
