--- a/data/level/Seaside/rock-a-fort-cave.cfg
+++ b/data/level/Seaside/rock-a-fort-cave.cfg
@@ -74,7 +74,7 @@
 				"_y2_bound": 1120,
 				"_y_bound": 544
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": -96,
 			"y": 544
 		},
@@ -722,7 +722,7 @@
 					"_y_bound": 544
 				},
 				"time_in_frame": 68,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": -96,
 				"y": 544
 			}
