--- a/data/level/Seaside/rock-a-fort.cfg
+++ b/data/level/Seaside/rock-a-fort.cfg
@@ -160,7 +160,7 @@
 				"_y2_bound": 1568,
 				"_y_bound": 652
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 320,
 			"y": 672
 		},
@@ -2834,7 +2834,7 @@
 					"_y_bound": 652
 				},
 				"time_in_frame": 48,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 320,
 				"y": 672
 			}
