--- a/data/level/Seaside/to-nenes-house.cfg
+++ b/data/level/Seaside/to-nenes-house.cfg
@@ -16,7 +16,7 @@
 				"_y2_bound": 1488,
 				"_y_bound": 653
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 32,
 			"y": 640
 		},
@@ -31,7 +31,7 @@
 				"_y2_bound": 1534,
 				"_y_bound": 960
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 1760,
 			"y": 960
 		},
@@ -46,7 +46,7 @@
 				"_y2_bound": 898,
 				"_y_bound": 651
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 3296,
 			"y": 480
 		},
@@ -61,7 +61,7 @@
 				"_y2_bound": 961,
 				"_y_bound": 575
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 1664,
 			"y": 576
 		},
@@ -316,7 +316,7 @@
 				"_y2_bound": 947,
 				"_y_bound": 651
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 2432,
 			"y": 640
 		},
@@ -2632,7 +2632,7 @@
 					"_y_bound": 651
 				},
 				"time_in_frame": 799,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 2432,
 				"y": 640
 			},
@@ -2650,7 +2650,7 @@
 					"_y_bound": 651
 				},
 				"time_in_frame": 799,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 3296,
 				"y": 480
 			},
@@ -2668,7 +2668,7 @@
 					"_y_bound": 653
 				},
 				"time_in_frame": 799,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 32,
 				"y": 640
 			},
@@ -2686,7 +2686,7 @@
 					"_y_bound": 960
 				},
 				"time_in_frame": 799,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 1760,
 				"y": 960
 			},
@@ -2704,7 +2704,7 @@
 					"_y_bound": 575
 				},
 				"time_in_frame": 799,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 1664,
 				"y": 576
 			}
