--- a/data/level/Seaside/bay-overlook.cfg
+++ b/data/level/Seaside/bay-overlook.cfg
@@ -38,7 +38,7 @@
 				"_y2_bound": 2176,
 				"_y_bound": 654
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": -1024,
 			"y": 672
 		},
