--- a/data/level/Seaside/crevice-village-central.cfg
+++ b/data/level/Seaside/crevice-village-central.cfg
@@ -25,7 +25,7 @@
 				"_y2_bound": 1119,
 				"_y_bound": 652
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 1184,
 			"y": 640
 		},
@@ -2409,7 +2409,7 @@
 					"_y_bound": 652
 				},
 				"time_in_frame": 462,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 1184,
 				"y": 640
 			}
