--- a/data/level/Seaside/crevice-village.cfg
+++ b/data/level/Seaside/crevice-village.cfg
@@ -16,7 +16,7 @@
 				"_y2_bound": 1054,
 				"_y_bound": 653
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": -320,
 			"y": 640
 		},
@@ -661,7 +661,7 @@
 					"_y_bound": 653
 				},
 				"time_in_frame": 21,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": -320,
 				"y": 640
 			}
