--- a/data/level/Seaside/flooded-caverns.cfg
+++ b/data/level/Seaside/flooded-caverns.cfg
@@ -35,7 +35,7 @@
 				"_y2_bound": 1984,
 				"_y_bound": 652
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 512,
 			"y": 672
 		},
