--- a/data/level/Seaside/secluded-hut.cfg
+++ b/data/level/Seaside/secluded-hut.cfg
@@ -52,7 +52,7 @@
 				"_y2_bound": 872,
 				"_y_bound": 653
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 608,
 			"y": 672
 		},
@@ -67,7 +67,7 @@
 				"_y2_bound": 924,
 				"_y_bound": 651
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 1248,
 			"y": 672
 		},
