--- a/data/level/Seaside/splash-hop.cfg
+++ b/data/level/Seaside/splash-hop.cfg
@@ -16,7 +16,7 @@
 				"_y2_bound": 996,
 				"_y_bound": 649
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 288,
 			"y": 672
 		},
@@ -2385,7 +2385,7 @@
 					"_y2_bound": 996,
 					"_y_bound": 649
 				},
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 288,
 				"y": 672
 			},
