--- a/data/level/Seaside/stonepipe-meadow.cfg
+++ b/data/level/Seaside/stonepipe-meadow.cfg
@@ -124,7 +124,7 @@
 				"_y2_bound": 1018,
 				"_y_bound": 651
 			},
-			"type": "water_controller",
+			"type": "water_controller_ocean",
 			"x": 2080,
 			"y": 672
 		},
@@ -1276,7 +1276,7 @@
 					"_y_bound": 651
 				},
 				"time_in_frame": 314,
-				"type": "water_controller",
+				"type": "water_controller_ocean",
 				"x": 2080,
 				"y": 672
 			}
