Some initial work towards adding effects for deadly acid.

--- a/data/objects/effects/liquids/acid_controller.cfg
+++ b/data/objects/effects/liquids/acid_controller.cfg
@@ -60,11 +60,11 @@ on_setup_particles: "[
 
 on_load: "[
 	%PROTO%, //Add the liquid surface effect.
-	if(find(level.frame_buffer_shaders, value.shader_info = 'new_acid_distort') = null,
+	if(find(level.frame_buffer_shaders, value.shader_info = 'acid_distort') = null,
 		add(level.frame_buffer_shaders, [{
 			begin_zorder: -10000000,
 			end_zorder: lib.zorder.get('water'),
-			shader_info: 'new_acid_distort'
+			shader_info: 'acid_distort'
 		}])
 	),
 	spawn('acid_controller.underlay', mid_x, mid_y, {
