--- a/data/objects/effects/liquids/acid_deadly_controller.cfg
+++ b/data/objects/effects/liquids/acid_deadly_controller.cfg
@@ -4,6 +4,8 @@ prototype: ["liquid"],
 zorder: "@include data/zorder.cfg:liquid_particle_effects",
 
 properties: {
+	liquid_texture: "string :: 'liquids/lethal-acid-noise.png'",
+
 	add_water_effect: "add_water(_x_bound, _y_bound, _x2_bound, _y2_bound, [20, 20, 100, 250])",
 	add_particle_effect: "[
 		add_particles('bubbles'),
@@ -30,6 +32,30 @@ animation: {
 	frames: 1,
 	duration: 1000,
 },
+
+on_load: "[
+	%PROTO%, //Add the liquid surface effect.
+	if(find(level.frame_buffer_shaders, value.shader_info = 'acid_deadly_distort') = null,
+		add(level.frame_buffer_shaders, [{
+			begin_zorder: -10000000,
+			end_zorder: lib.zorder.get('water'),
+			shader_info: 'acid_deadly_distort'
+		}])
+	),
+	spawn('acid_controller.underlay', mid_x, mid_y, {
+		_x_bound: _x_bound,
+		_x2_bound: _x2_bound,
+		_y_bound: _y_bound,
+		_y2_bound: _y2_bound,
+	}),
+	spawn('acid_controller.top', mid_x, mid_y, {
+		_x_bound: _x_bound,
+		_x2_bound: _x2_bound,
+		_y_bound: _y_bound,
+		_y2_bound: _y2_bound,
+	}),
+]",
+
 
 particle_system: [
 	{
