--- a/data/objects/effects/liquids/acid_deadly_controller.cfg
+++ b/data/objects/effects/liquids/acid_deadly_controller.cfg
@@ -42,13 +42,13 @@ on_load: "[
 			shader_info: 'acid_deadly_distort'
 		}])
 	),
-	spawn('acid_controller.underlay', mid_x, mid_y, {
+	spawn('acid_deadly_controller.underlay', mid_x, mid_y, {
 		_x_bound: _x_bound,
 		_x2_bound: _x2_bound,
 		_y_bound: _y_bound,
 		_y2_bound: _y2_bound,
 	}),
-	spawn('acid_controller.top', mid_x, mid_y, {
+	spawn('acid_deadly_controller.top', mid_x, mid_y, {
 		_x_bound: _x_bound,
 		_x2_bound: _x2_bound,
 		_y_bound: _y_bound,
@@ -96,4 +96,63 @@ particle_system: [
 		},
 	},
 ],
+
+object_type: [
+	{
+		id: "top",
+		zorder: "@include data/zorder.cfg:exterior_near_background",
+		properties: {
+		#-------------------------- vars --------------------------#
+			_x_bound: { type: "int", default: 0, persistent: false },
+			_x2_bound: { type: "int", default: 0, persistent: false },
+			_y_bound: { type: "int", default: 0, persistent: false },
+			_y2_bound: { type: "int", default: 0, persistent: false },
+
+			_offset: { type: "decimal", default: 0, persistent: false },
+		},
+		on_create: "[fire_event('calculate_segments')]",
+		on_calculate_segments: "[set(x,_x_bound),set(y,_y_bound - 20),set(draw_area, [5.0*sin(_offset), 0, abs(_x2_bound-_x_bound)/2, img_h/2])]",
+		on_process: "[add(_offset,1.5),fire_event('calculate_segments')]",
+
+		#we don't want to compile the image since we rely on it tiling.
+		no_compile_image: "liquids/lethal-acid-top.png",
+		animation: {
+			image: "liquids/lethal-acid-top.png",
+			id: "normal",
+			x: 0,
+			w: 128,
+			y: 0,
+			h: 16,
+		},
+	},
+	{
+		id: "underlay",
+		zorder: "@include data/zorder.cfg:background_parallax_walls_further",
+		properties: {
+		#-------------------------- vars --------------------------#
+			_x_bound: { type: "int", default: 0, persistent: false },
+			_x2_bound: { type: "int", default: 0, persistent: false },
+			_y_bound: { type: "int", default: 0, persistent: false },
+			_y2_bound: { type: "int", default: 0, persistent: false },
+
+			_offset: { type: "decimal", default: 0, persistent: false },
+		},
+		on_create: "[fire_event('calculate_segments')]",
+		on_calculate_segments: "[set(x,_x_bound),set(y,_y_bound),set(draw_area, [0, _offset, abs(_x2_bound-_x_bound)/2, abs(_y2_bound-_y_bound)/2])]",
+		on_process: "[add(_offset,-0.2),fire_event('calculate_segments')]",
+
+		#we don't want to compile the image since we rely on it tiling.
+		no_compile_image: "liquids/lethal-acid-bg.png",
+		animation: {
+			image: "liquids/lethal-acid-bg.png",
+			id: "normal",
+			x: 0,
+			w: 256,
+			y: 0,
+			h: 256,
+		},
+	},
+],
+
+
 }
