--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -335,6 +335,7 @@
 					gl_FragColor = attenuated_final_color;					
 				}
 
+				gl_FragColor.a = 1;
 			}
 		",
 
@@ -635,6 +636,7 @@
 					gl_FragColor = final_color;					
 				}
 
+				gl_FragColor.a = 1;
 			}
 		",
 
@@ -931,6 +933,7 @@
 					gl_FragColor = final_color;					
 				}
 
+				gl_FragColor.a = 1;
 			}
 		",
 
