Refactoring the liquid prototype and acid_controller to use the standard constructors.

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -7,6 +7,7 @@ ignore_collide: true,
 hidden_in_game: true,
 
 properties: {
+#-------------------------- liquid-specific settings --------------------------#
 	get_texture: "texture_object :: query_cache(global_cache(4), null, get_texture(liquid_texture))",
 	texture_dim: "decimal :: 256.0",
 	texture_speed: "decimal :: 0.002",
@@ -26,6 +27,32 @@ properties: {
 	liquid_damage: "int :: 0",
 	damage_type: "DamageType :: enum neutral",
 	remove_water_effect: "commands :: remove_water(_x_bound, _y_bound, _x2_bound, _y2_bound)",
+
+
+
+#-------------------------- constructors --------------------------#
+	transient_obj_constructor: "commands :: [
+		liquid_prototype_constructor ;
+		liquid_obj_constructor
+	]",
+
+
+
+	liquid_prototype_constructor: "commands :: [
+		add_particle_effect,
+		add_object(liquid_surface),
+		fire_event(liquid_surface, 'create'),
+		
+		set(activation_area, [
+			_x_bound - 50,
+			_y_bound - 100,
+			_x2_bound - _x_bound + 100,
+			_y2_bound - _y_bound + 100
+		]),
+	]",
+
+	liquid_obj_constructor: "commands :: null",
+
 
 #-------------------------- vars --------------------------#
 	_x_bound: { type: "int", editor_info: { type: "x", value: "x-100" } },
@@ -47,19 +74,7 @@ on_editor_changed_variable: "[
 ]",
 on_editor_added: "add_water_effect",
 
-on_start_level: "
-	set(activation_area, [
-		_x_bound - 50,
-		_y_bound - 100,
-		_x2_bound - _x_bound + 100,
-		_y2_bound - _y_bound + 100]
-		)",
 
-on_load: "[
-	add_particle_effect,
-	add_object(liquid_surface),
-	fire_event(liquid_surface, 'create'),
-]",
 
 on_end_anim: "animation('normal')",
 
