Converted the water_controller over to properly using our constructor calls.

--- a/data/objects/effects/liquids/acid_controller.cfg
+++ b/data/objects/effects/liquids/acid_controller.cfg
@@ -54,18 +54,22 @@ properties: {
 		add_particle_effect ;
 		setup_particles ;
 		[
-			if(find(level.frame_buffer_shaders, value.shader_info = 'acid_distort') = null,
-				add(level.frame_buffer_shaders, [{
-					begin_zorder: -10000000,
-					end_zorder: lib.zorder.get('water'),
-					shader_info: 'acid_distort'
-				}])
-			),
+			setup_shader,
 			add_object(underlay_obj),
 			add_object(top_obj),
 		]
 
 	]",
+
+	setup_shader: "
+		if(find(level.frame_buffer_shaders, value.shader_info = 'acid_distort') = null,
+			add(level.frame_buffer_shaders, [{
+				begin_zorder: -10000000,
+				end_zorder: lib.zorder.get('water'),
+				shader_info: 'acid_distort'
+			}])
+		)
+	",
 
 	add_particle_effect: "[
 		add_object(acid_surface_bubbles),
