--- a/data/objects/effects/liquids/water_controller_ocean.cfg
+++ b/data/objects/effects/liquids/water_controller_ocean.cfg
@@ -8,10 +8,9 @@ properties: {
 	texture_speed: "decimal :: 0.002",
 
 	add_water_effect: "add_water(_x_bound, _y_bound, _x2_bound, _y2_bound)",
-	add_particle_effect: "[
-		fire_event('setup_particles'),
-	] ",
-	
+
+
+#-------------------------- fx objects --------------------------#
 	volume_bubbles: { 
 		type: "obj particle_attache", 
 		init: "object('particle_attache', x,y, {
@@ -23,36 +22,101 @@ properties: {
 		})",
 		serializable: false,
 	},
+
+	underlay_obj: {
+		type: "obj water_controller_ocean.underlay",
+		init: "object('water_controller_ocean.underlay', mid_x, mid_y, {
+				_x_bound: _x_bound,
+				_x2_bound: _x2_bound,
+				_y_bound: _y_bound,
+				_y2_bound: _y2_bound,
+			})",
+	},
+	lights_obj: {
+		type: "obj water_controller_ocean.lights",
+		init: "object('water_controller_ocean.lights', mid_x, mid_y, {
+				_x_bound: _x_bound,
+				_x2_bound: _x2_bound,
+				_y_bound: _y_bound,
+				_y2_bound: _y2_bound,
+			})",
+	},
+	lights_transverse_obj: {
+		type: "obj water_controller_ocean.lights",
+		init: "object('water_controller_ocean.lights', mid_x, mid_y, {
+				_x_bound: _x_bound,
+				_x2_bound: _x2_bound,
+				_y_bound: _y_bound,
+				_y2_bound: _y2_bound,
+				_timeshift: 1.4,
+			})",
+	},
+
+
+
+#-------------------------- constructors --------------------------#
+	liquid_obj_constructor: "commands :: [
+		add_particle_effect ;
+		setup_particles ;
+		[
+			setup_shader,
+			add_object(underlay_obj),
+			add_object(lights_obj),
+			add_object(lights_transverse_obj),
+		]
+
+	]",
+
+	setup_shader: "
+		if(find(level.frame_buffer_shaders, value.shader_info = 'water_distort_new') = null,
+			add(level.frame_buffer_shaders, [{
+				begin_zorder: -10000000,
+				end_zorder: lib.zorder.get('water'),
+				shader_info: 'water_distort_new'
+			}])
+		)
+	",
+
+	add_particle_effect: "[
+		add_object(volume_bubbles),
+	]",
+
+	setup_particles: "[
+		set(volume_bubbles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
+		set(volume_bubbles.particles, (
+			raw_particle_system_info + {
+				position: [
+					(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
+					_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
+					0
+				],
+				fast_forward: (map <- raw_particle_system_info.fast_forward) + {
+					time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
+				},
+				emitter: (map <- raw_particle_system_info.emitter) + {
+					time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
+					box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
+					emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
+						max: (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
+					}
+				},
+			} where
+				raw_particle_system_info = 
+					(ParticleSystemInfo <- get_document('data/particles/bubbles_2.cfg')).info,
+				bubble_average_lifetime = 
+					(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
+					where average_vertical_bubble_speed = 0.65 //as experimentally verified ([DDR 2020-40-24] 0.6 is actually more proper, but I like the bubbles disappearing before they hit the surface sometimes.)
+		)),
+	]",
 },
 
-on_setup_particles: "[
-	set(volume_bubbles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
-	set(volume_bubbles.particles, (
-		raw_particle_system_info + {
-			position: [
-				(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
-				_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
-				0
-			],
-			fast_forward: (map <- raw_particle_system_info.fast_forward) + {
-				time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
-			},
-			emitter: (map <- raw_particle_system_info.emitter) + {
-				time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
-				box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
-				emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
-					max: (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
-				}
-			},
-		} where
-			raw_particle_system_info = 
-				(ParticleSystemInfo <- get_document('data/particles/bubbles_2.cfg')).info,
-			bubble_average_lifetime = 
-				(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
-				where average_vertical_bubble_speed = 0.65 //as experimentally verified ([DDR 2020-40-24] 0.6 is actually more proper, but I like the bubbles disappearing before they hit the surface sometimes.)
-	)),
-	add_object(volume_bubbles),
-]",
+
+
+
+
+
+
+
 
 animation: {
 	id: "normal",
@@ -61,36 +125,6 @@ animation: {
 	frames: 1,
 	duration: 1000,
 },
-
-on_load: "[
-	%PROTO%, //Add the liquid surface effect.
-	if(find(level.frame_buffer_shaders, value.shader_info = 'water_distort_new') = null,
-		add(level.frame_buffer_shaders, [{
-			begin_zorder: -10000000,
-			end_zorder: lib.zorder.get('water'),
-			shader_info: 'water_distort_new'
-		}])
-	),
-	spawn('water_controller_ocean.underlay', mid_x, mid_y, {
-		_x_bound: _x_bound,
-		_x2_bound: _x2_bound,
-		_y_bound: _y_bound,
-		_y2_bound: _y2_bound,
-	}),
-	spawn('water_controller_ocean.lights', mid_x, mid_y, {
-		_x_bound: _x_bound,
-		_x2_bound: _x2_bound,
-		_y_bound: _y_bound,
-		_y2_bound: _y2_bound,
-	}),
-	spawn('water_controller_ocean.lights', mid_x, mid_y, {
-		_x_bound: _x_bound,
-		_x2_bound: _x2_bound,
-		_y_bound: _y_bound,
-		_y2_bound: _y2_bound,
-		_timeshift: 1.4,
-	}),
-]",
 
 
 
