Updated the deadly acid to use the new constructors.

--- a/data/objects/effects/liquids/acid_deadly_controller.cfg
+++ b/data/objects/effects/liquids/acid_deadly_controller.cfg
@@ -7,23 +7,110 @@ properties: {
 	liquid_texture: "string :: 'liquids/lethal-acid-noise.png'",
 
 	add_water_effect: "add_water(_x_bound, _y_bound, _x2_bound, _y2_bound, [20, 20, 100, 250])",
-	add_particle_effect: "[
-		add_particles('bubbles'),
-		add_particles('fizz'),
-		fire_event('setup_particles')]",
 
 	liquid_damage: "kill_anything",
 	damage_type: "enum acid",
+	
+	
+
+
+#-------------------------- fx objects --------------------------#
+	//Surface bubbles can float left or right. We can't set up one emitter to do this, so we just use two and switch the emitter direction.
+	acid_surface_bubbles: { 
+		type: "obj particle_attache", 
+		init: "object('particle_attache', x,y, {
+			_particle_type:'acid_surface_bubbles', //Silence check for this existing. `particles`, which this sets, is overwritten later.
+			parent: me,
+			time_to_die: 0,
+			x:x, y:y,
+			zorder: lib.zorder.get('interior_back_wall_decor'),
+		})",
+		serializable: false,
+	},
+
+	underlay_obj: {
+		type: "obj acid_deadly_controller.underlay",
+		init: "object('acid_deadly_controller.underlay', mid_x, mid_y, {
+				_x_bound: _x_bound,
+				_x2_bound: _x2_bound,
+				_y_bound: _y_bound,
+				_y2_bound: _y2_bound,
+			})",
+	},
+	top_obj: {
+		type: "obj acid_deadly_controller.top",
+		init: "object('acid_deadly_controller.top', mid_x, mid_y, {
+				_x_bound: _x_bound,
+				_x2_bound: _x2_bound,
+				_y_bound: _y_bound,
+				_y2_bound: _y2_bound,
+			})",
+	},
+
+
+
+
+
+#-------------------------- constructors --------------------------#
+	liquid_obj_constructor: "commands :: [
+		add_particle_effect ;
+		setup_particles ;
+		[
+			setup_shader,
+			add_object(underlay_obj),
+			add_object(top_obj),
+		]
+
+	]",
+
+	setup_shader: "
+		if(find(level.frame_buffer_shaders, value.shader_info = 'acid_deadly_distort') = null,
+			add(level.frame_buffer_shaders, [{
+				begin_zorder: -10000000,
+				end_zorder: lib.zorder.get('water'),
+				shader_info: 'acid_deadly_distort'
+			}])
+		)
+	",
+	
+	add_particle_effect: "[
+		add_object(acid_surface_bubbles),
+		add_particles('bubbles'),
+		add_particles('fizz'),
+	]",
+	
+	setup_particles: "[
+		set(particle_systems['bubbles'].area, [_x_bound, _y_bound, _x2_bound, _y2_bound]),
+		set(particle_systems['fizz'].min_x, _x_bound - x),
+		set(particle_systems['fizz'].max_x, _x2_bound - x),
+		set(particle_systems['fizz'].min_y, (_y_bound - 15) - y),
+		set(particle_systems['fizz'].max_y, (_y2_bound) - y),
+		set(particle_systems['fizz'].spawn_rate, 40*(_x2_bound - _x_bound)),
+	
+		set(acid_surface_bubbles.particles, (
+			raw_particle_system_info + {
+				position: [
+					(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
+					-(_y_bound - mid_y - 3 - 9), //Position the center point (of the box emitter) at the top of the body of water. Less 4px to float on top of water surface.
+					0
+				],
+				emitter: (map <- raw_particle_system_info.emitter) + {
+					box_width: _x2_bound - _x_bound - 64*2, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.) Less 64px for fade in/out margins.
+					box_height: 18, //Make the bubbles as tall as the surface strip of water.
+					emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
+						max: (_x2_bound - _x_bound) / 125, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
+					}
+				},
+			} where
+				raw_particle_system_info = 
+					(ParticleSystemInfo <- get_document('data/particles/acid_surface_bubbles.cfg')).info
+		)),
+	]",
 },
 
-on_setup_particles: "[
-	   set(particle_systems['bubbles'].area, [_x_bound, _y_bound, _x2_bound, _y2_bound]),
-	   set(particle_systems['fizz'].min_x, _x_bound - x),
-	   set(particle_systems['fizz'].max_x, _x2_bound - x),
-	   set(particle_systems['fizz'].min_y, (_y_bound - 15) - y),
-	   set(particle_systems['fizz'].max_y, (_y2_bound) - y),
-	   set(particle_systems['fizz'].spawn_rate, 40*(_x2_bound - _x_bound)),
-	   ]",
+
+
+
 
 animation: {
 	id: "normal",
@@ -33,28 +120,6 @@ animation: {
 	duration: 1000,
 },
 
-on_load: "[
-	%PROTO%, //Add the liquid surface effect.
-	if(find(level.frame_buffer_shaders, value.shader_info = 'acid_deadly_distort') = null,
-		add(level.frame_buffer_shaders, [{
-			begin_zorder: -10000000,
-			end_zorder: lib.zorder.get('water'),
-			shader_info: 'acid_deadly_distort'
-		}])
-	),
-	spawn('acid_deadly_controller.underlay', mid_x, mid_y, {
-		_x_bound: _x_bound,
-		_x2_bound: _x2_bound,
-		_y_bound: _y_bound,
-		_y2_bound: _y2_bound,
-	}),
-	spawn('acid_deadly_controller.top', mid_x, mid_y, {
-		_x_bound: _x_bound,
-		_x2_bound: _x2_bound,
-		_y_bound: _y_bound,
-		_y2_bound: _y2_bound,
-	}),
-]",
 
 
 particle_system: [
