--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -69,7 +69,8 @@ on_editor_changing_variable:"remove_water_effect",
 on_editor_removed: "remove_water_effect",
 on_editor_changed_variable: "[
 	add_water_effect,
-	add_particle_effect,
+	setup_particles, //Update particle bounds when editing.
+	set(liquid_surface.xy, xy), //Fix liquid surface becoming detached.
 	fire_event(liquid_surface, 'create'),
 ]",
 on_editor_added: "add_water_effect",
