--- a/data/objects/effects/liquids/water_controller.cfg
+++ b/data/objects/effects/liquids/water_controller.cfg
@@ -26,38 +26,26 @@ properties: {
 
 	underlay_obj: {
 		type: "obj water_controller.underlay",
-		init: "object('water_controller.underlay', mid_x, mid_y, {
-				_x_bound: _x_bound,
-				_x2_bound: _x2_bound,
-				_y_bound: _y_bound,
-				_y2_bound: _y2_bound,
-			})",
+		init: "object('water_controller.underlay', mid_x, mid_y, { 
+			controller: me,
+		})",
 	},
 	top_obj: {
 		type: "obj water_controller.top",
 		init: "object('water_controller.top', mid_x, mid_y, {
-				_x_bound: _x_bound,
-				_x2_bound: _x2_bound,
-				_y_bound: _y_bound,
-				_y2_bound: _y2_bound,
+				controller: me,
 			})",
 	},
 	lights_obj: {
 		type: "obj water_controller.lights",
 		init: "object('water_controller.lights', mid_x, mid_y, {
-				_x_bound: _x_bound,
-				_x2_bound: _x2_bound,
-				_y_bound: _y_bound,
-				_y2_bound: _y2_bound,
+				controller: me,
 			})",
 	},
 	lights_transverse_obj: {
 		type: "obj water_controller.lights",
 		init: "object('water_controller.lights', mid_x, mid_y, {
-				_x_bound: _x_bound,
-				_x2_bound: _x2_bound,
-				_y_bound: _y_bound,
-				_y2_bound: _y2_bound,
+				controller: me,
 				_timeshift: 1.4,
 			})",
 	},
@@ -123,7 +111,16 @@ properties: {
 
 
 
-
+on_editor_changed_variable: "[
+	//Hack: Fix water not moving in response to editor. (I think it gets set to the original object, not the 'shadow object' we're editing.)
+	set(volume_bubbles.parent, me),
+	set(underlay_obj.controller, me),
+	set(top_obj.controller, me),
+	set(lights_obj.controller, me),
+	set(lights_transverse_obj.controller, me),
+	
+	proto_event('liquid', 'editor_changed_variable'),
+]",
 
 
 
@@ -143,15 +140,20 @@ object_type: [
 		zorder: "@include data/zorder.cfg:background_parallax_walls_further",
 		properties: {
 		#-------------------------- vars --------------------------#
-			_x_bound: { type: "int", default: 0, persistent: false },
-			_x2_bound: { type: "int", default: 0, persistent: false },
-			_y_bound: { type: "int", default: 0, persistent: false },
-			_y2_bound: { type: "int", default: 0, persistent: false },
-
+			controller: { type: "obj liquid", persistent: false },
 			_offset: { type: "decimal", default: 0, persistent: false },
 		},
 		on_create: "[fire_event('calculate_segments')]",
-		on_calculate_segments: "[set(x,_x_bound),set(y,_y_bound),set(draw_area, [0, _offset, abs(_x2_bound-_x_bound)/2, abs(_y2_bound-_y_bound)/2])]",
+		on_calculate_segments: "[
+			set(x,controller._x_bound),
+			set(y,controller._y_bound),
+			set(draw_area, [
+				0,
+				_offset, 
+				abs(controller._x2_bound-controller._x_bound)/2, 
+				abs(controller._y2_bound-controller._y_bound)/2
+			]),
+		]",
 		on_process: "[add(_offset,0.25),fire_event('calculate_segments')]",
 
 		#we don't want to compile the image since we rely on it tiling.
@@ -170,15 +172,20 @@ object_type: [
 		zorder: "@include data/zorder.cfg:exterior_near_background",
 		properties: {
 		#-------------------------- vars --------------------------#
-			_x_bound: { type: "int", default: 0, persistent: false },
-			_x2_bound: { type: "int", default: 0, persistent: false },
-			_y_bound: { type: "int", default: 0, persistent: false },
-			_y2_bound: { type: "int", default: 0, persistent: false },
-
+			controller: { type: "obj liquid", persistent: false },
 			_offset: { type: "decimal", default: 0, persistent: false },
 		},
 		on_create: "[fire_event('calculate_segments')]",
-		on_calculate_segments: "[set(x,_x_bound),set(y,_y_bound - 20),set(draw_area, [5.0*sin(_offset), 0, abs(_x2_bound-_x_bound)/2, img_h/2])]",
+		on_calculate_segments: "[
+			set(x,controller._x_bound),
+			set(y,controller._y_bound - 20),
+			set(draw_area, [
+				5.0*sin(_offset), 
+				0, 
+				abs(controller._x2_bound-controller._x_bound)/2, 
+				img_h/2
+			]),
+		]",
 		on_process: "[add(_offset,1.5),fire_event('calculate_segments')]",
 
 		#we don't want to compile the image since we rely on it tiling.
@@ -198,16 +205,22 @@ object_type: [
 		zsub_order: 1,
 		properties: {
 		#-------------------------- vars --------------------------#
-			_x_bound: { type: "int", default: 0, persistent: false },
-			_x2_bound: { type: "int", default: 0, persistent: false },
-			_y_bound: { type: "int", default: 0, persistent: false },
-			_y2_bound: { type: "int", default: 0, persistent: false },
-
+			controller: { type: "obj liquid", persistent: false },
 			_offset: { type: "decimal", default: 0, persistent: false },
 			_timeshift: { type: "decimal", default: 0, persistent: false },
 		},
 		on_create: "[fire_event('calculate_segments')]",
-		on_calculate_segments: "[set(x,_x_bound),set(y,_y_bound),set(draw_area, [5.0*_timeshift*sin(_offset), 0, abs(_x2_bound-_x_bound)/2, img_h/2]), set(alpha,50)]",
+		on_calculate_segments: "[
+			set(x,controller._x_bound),
+			set(y,controller._y_bound),
+			set(draw_area, [
+				5.0*_timeshift*sin(_offset), 
+				0, 
+				abs(controller._x2_bound-controller._x_bound)/2, 
+				img_h/2
+			]), 
+			set(alpha,50),
+		]",
 		on_process: "[add(_offset,1.5),fire_event('calculate_segments')]",
 
 		#we don't want to compile the image since we rely on it tiling.
