Ported water controller editor fixes to other fluid controllers.

--- a/data/objects/effects/liquids/acid_controller.cfg
+++ b/data/objects/effects/liquids/acid_controller.cfg
@@ -33,19 +33,13 @@ properties: {
 	underlay_obj: {
 		type: "obj acid_controller.underlay",
 		init: "object('acid_controller.underlay', mid_x, mid_y, {
-				_x_bound: _x_bound,
-				_x2_bound: _x2_bound,
-				_y_bound: _y_bound,
-				_y2_bound: _y2_bound,
+				controller: me,
 			})",
 	},
 	top_obj: {
 		type: "obj acid_controller.top",
 		init: "object('acid_controller.top', mid_x, mid_y, {
-				_x_bound: _x_bound,
-				_x2_bound: _x2_bound,
-				_y_bound: _y_bound,
-				_y2_bound: _y2_bound,
+				controller: me,
 			})",
 	},
 
@@ -107,6 +101,15 @@ properties: {
 },
 
 
+on_editor_changed_variable: "[
+	//Hack: Fix water not moving in response to editor. (I think it gets set to the original object, not the 'shadow object' we're editing.)
+	set(acid_surface_bubbles.parent, me),
+	set(underlay_obj.controller, me),
+	set(top_obj.controller, me),
+	
+	proto_event('liquid', 'editor_changed_variable'),
+]",
+
 
 animation: {
 	id: "normal",
@@ -155,21 +158,29 @@ particle_system: [
 		},
 	},
 ],
+
+
+
 object_type: [
 	{
 		id: "underlay",
 		zorder: "@include data/zorder.cfg:background_parallax_walls_further",
 		properties: {
 		#-------------------------- vars --------------------------#
-			_x_bound: { type: "int", default: 0, persistent: false },
-			_x2_bound: { type: "int", default: 0, persistent: false },
-			_y_bound: { type: "int", default: 0, persistent: false },
-			_y2_bound: { type: "int", default: 0, persistent: false },
-
+			controller: { type: "obj liquid", persistent: false },
 			_offset: { type: "decimal", default: 0, persistent: false },
 		},
 		on_create: "[fire_event('calculate_segments')]",
-		on_calculate_segments: "[set(x,_x_bound),set(y,_y_bound),set(draw_area, [0, _offset, abs(_x2_bound-_x_bound)/2, abs(_y2_bound-_y_bound)/2])]",
+		on_calculate_segments: "[
+			set(x,controller._x_bound),
+			set(y,controller._y_bound),
+			set(draw_area, [
+				0, 
+				_offset, 
+				abs(controller._x2_bound-controller._x_bound)/2, 
+				abs(controller._y2_bound-controller._y_bound)/2
+			]),
+		]",
 		on_process: "[add(_offset,-0.2),fire_event('calculate_segments')]",
 
 		#we don't want to compile the image since we rely on it tiling.
@@ -188,15 +199,20 @@ object_type: [
 		zorder: "@include data/zorder.cfg:exterior_near_background",
 		properties: {
 		#-------------------------- vars --------------------------#
-			_x_bound: { type: "int", default: 0, persistent: false },
-			_x2_bound: { type: "int", default: 0, persistent: false },
-			_y_bound: { type: "int", default: 0, persistent: false },
-			_y2_bound: { type: "int", default: 0, persistent: false },
-
+			controller: { type: "obj liquid", persistent: false },
 			_offset: { type: "decimal", default: 0, persistent: false },
 		},
 		on_create: "[fire_event('calculate_segments')]",
-		on_calculate_segments: "[set(x,_x_bound),set(y,_y_bound - 20),set(draw_area, [5.0*sin(_offset), 0, abs(_x2_bound-_x_bound)/2, img_h/2])]",
+		on_calculate_segments: "[
+			set(x,controller._x_bound),
+			set(y,controller._y_bound - 20),
+			set(draw_area, [
+				5.0*sin(_offset), 
+				0, 
+				abs(controller._x2_bound-controller._x_bound)/2, 
+				img_h/2
+			]),
+		]",
 		on_process: "[add(_offset,1.5),fire_event('calculate_segments')]",
 
 		#we don't want to compile the image since we rely on it tiling.
